--- a/public/html/menu.html
+++ b/public/html/menu.html
@@ -3,6 +3,6 @@
     <li data-id="history" onclick="goToPage('/history')"><i class="fa fa-history"></i><span class="on-mobile-hide"> History</span></li>
     <li data-id="live" onclick="goToPage('/live-data')"><i class="fa fa-line-chart"></i><span class="on-mobile-hide"> Live</span></li>
     <li data-id="calculator" onclick="goToPage('/calculator')"><i class="fa fa-calculator"></i><span class="on-mobile-hide"> Calculator</span></li>
-    <li data-id="setting" onclick="goToPage('/settings')"><i class="fa fa-gear"></i><span class="on-mobile-hide"> Settings</span></li>
+    <li data-id="setting" onclick="goToPage('/settings')" style="display: none;"><i class="fa fa-gear"></i><span class="on-mobile-hide"> Settings</span></li>
     <li><i class="fa fa-bell"></i></li>
 </ul>
